<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >

    <android.support.v7.widget.CardView
        android:id="@+id/artistImgCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toTopOf="@+id/textView29"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/circleImageView2"
        app:layout_constraintVertical_bias="1.0">


        <android.support.v4.widget.CircleImageView
            android:id="@+id/circleImageView"
            android:layout_width="124dp"
            android:layout_height="113dp" />
    </android.support.v7.widget.CardView>

    <android.support.v4.widget.CircleImageView
        android:id="@+id/circleImageView2"
        android:layout_width="match_parent"
        android:layout_height="205dp"
        android:src="@drawable/exo_controls_play"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginTop="164dp"
        android:fontFamily="sans-serif-condensed"
        android:text="TextView"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/textarea"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/circleImageView2">

        <TextView
            android:id="@+id/albumyako"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/albumszako"
            android:textColor="@color/windowBackground" />

        <TextView
            android:id="@+id/infoyako"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/infoyako"
            android:textColor="@color/windowBackground" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="99dp"
        android:layout_height="90dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:srcCompat="@android:drawable/ic_lock_silent_mode_off" />

    <TextView
        android:id="@+id/textView31"
        android:layout_width="261dp"
        android:layout_height="18dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        android:text="TextView"
        android:textColor="@color/textarea"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView8"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/textView32"
        android:layout_width="267dp"
        android:layout_height="18dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:text="TextView"
        android:textColor="@color/textarea"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView8"
        app:layout_constraintTop_toBottomOf="@+id/textView31" />

    <android.support.v7.widget.CardView
        android:id="@+id/artistbtncard4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/homeviewbtn"
        app:cardElevation="5dp"
        app:layout_constraintStart_toEndOf="@+id/imageView8"
        app:layout_constraintTop_toBottomOf="@+id/textView32">

        <Button
            android:id="@+id/button4"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="123dp"
            android:layout_height="33dp"
            android:text="View Album"
            android:textSize="12sp" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/artistbtncard5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        app:cardBackgroundColor="@color/homeviewbtn"
        app:cardElevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toEndOf="@+id/artistbtncard4"
        app:layout_constraintTop_toBottomOf="@+id/textView32">

        <Button
            android:id="@+id/button5"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="123dp"
            android:layout_height="33dp"
            android:fontFamily="sans-serif-condensed"
            android:text="Play All"
            android:textSize="12sp"
            android:textStyle="bold" />
    </android.support.v7.widget.CardView>


    <ListView
        android:id="@+id/albumlistid"
        android:layout_width="368dp"
        android:layout_height="220dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/artistmixid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:layout_marginEnd="36dp"
        android:layout_marginLeft="16dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/zikimix"
        android:textColor="@color/windowBackground"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toStartOf="@+id/artistImgCard"
        app:layout_constraintLeft_toLeftOf="parent" />

    <ScrollView
        android:id="@+id/infoscrollid"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView8">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/joinedon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/textarea"/>

            <TextView
                android:id="@+id/realnames"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/textarea"/>

            <TextView
                android:id="@+id/Dateofbirth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/textarea"/>

            <TextView
                android:id="@+id/numberofalbums"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/textarea"/>

            <TextView
                android:id="@+id/artiststudioid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/textarea"/>

            <TextView
                android:id="@+id/Genreid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                 android:textColor="@color/textarea"/>

            <TextView
                android:id="@+id/postedmatatu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/textarea"/>

            <TextView
                android:id="@+id/artistbio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/textarea"/>

            <TextView
                android:id="@+id/moreinfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/moreinfoyako"
                android:textAlignment="textEnd"
                android:textColor="@color/colorAccent" />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/textView71"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginStart="52dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/followers"
        android:textColor="@color/textarea"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView29"
        app:layout_constraintTop_toBottomOf="@+id/textView29" />

    <TextView
        android:id="@+id/textView72"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/artistgenre"
        android:textColor="@color/textarea"
        app:layout_constraintEnd_toStartOf="@+id/textView29"
        app:layout_constraintHorizontal_bias="0.554"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView29" />


</android.support.constraint.ConstraintLayout>
